--- a/Views/Rooms/SearchError.cshtml
+++ b/Views/Rooms/SearchError.cshtml
@@ -4,21 +4,19 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <style>
-    .btn-primary {
-        cursor: pointer;
-        background-color: rgb(244, 154, 153);
-        border: none;
+    .container {
+        margin-top: 70px;
     }
 
-        .btn-primary:hover {
-            cursor: pointer;
-            background-color: #ee7c72;
-            border: none;
-        }
+    .alert {
+        font-size: 15px;
+        font-weight: bold;
+    }
 </style>
-<div class="container col-11" style="margin-top:150px;">
-    <h3 style="font-weight:700">No results</h3>
-    <p>Sorry, no results were found. Please try again</p>
-    <button type="submit" class="btn btn-primary" onclick="window.location.href = '@Url.Action("Index", "Rooms")';">Search Again</button>
-    <hr />
+<div class="container col-md-11">
+    <div class="alert alert-danger">
+        Sorry, no results were found. Please try again.
+    </div>
+    @Html.ActionLink("Search Again", "Index", "Rooms")
+
 </div>
