--- a/Views/Images/Create.cshtml
+++ b/Views/Images/Create.cshtml
@@ -28,29 +28,35 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal container col-md-11">
-        <h4>Upload Image</h4>
-        <hr />
-        <div class="form-group">
-            @Html.LabelFor(model => model.imageName, "Image Name", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-lg-4 col-md-6 col-sm-8">
-                @Html.EditorFor(model => model.imageName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.imageName, "", new { @class = "text-danger" })
-            </div>
+<div class="form-horizontal container col-md-11">
+    <h4>Upload Image</h4>
+    <hr />
+    <div class="form-group">
+        @Html.LabelFor(model => model.imageName, "Image Name", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-lg-4 col-md-6 col-sm-8">
+            @Html.EditorFor(model => model.imageName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.imageName, "", new { @class = "text-danger" })
         </div>
-        <div class="form-group">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-8" style="margin-bottom:16px">
-                    <input type="file" class="btn btn-default" id="inputGroupFile02" name="postedFile" accept="image/png, image/gif, image/jpeg, image/jpg" />
-                </div>
-            </div>
+        @Html.LabelFor(model => model.hotelId, "Image Name", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-lg-4 col-md-6 col-sm-8">
+            @Html.EditorFor(model => model.hotelId, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.hotelId, "", new { @class = "text-danger" })
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-primary" />
+    </div>
+    <div class="form-group">
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-8" style="margin-bottom:16px">
+                <input type="file" class="btn btn-default" id="inputGroupFile02" name="postedFile" accept="image/png, image/gif, image/jpeg, image/jpg" />
             </div>
         </div>
     </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-primary" />
+        </div>
+    </div>
+</div>
 
 }
